- Made input encoding filter configurable at build-time with properties.
- Made component editor view (structure tool view) consider available tool languages when choosing localized labels for edit on sight etc.
- Added cache-possibility to the matchingContents-tag and implements a default caching.

-------------------------------------------------------------------------------------
- InfoGlue 2.4.6 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
The spring release 2007 of InfoGlue contains a huge amount of new features, bugfixes and improvements.
As allways we encourage upgrading and this release focuses extra on performance, stability, scalability
maintanance and diagnostics so it will hopefully make your life easier. Having that said there are of course
welcomed new features for both users and developers as well.

Thanx to all involved!!

The InfoGlue Team


Abbreviated Changelog from 2.4.1 Final 
---------------------------------------
- InfoGlue now require Java 1.5
- Added fix so if the cas-ticket is first argument it will not be forgotten
- Fixed so one can state to user $currentUrl for cas-serviceURL in the cms-authentication filter as well. Before only one static url could be set.
- Added debug and fixed an issue where anonymous user could interfer with userBase in JNDI-lookups if not set
- Fixed so all url:s are protected in infoglueCMS - before only .action was protected. Instead added so one can specify url:s to allow in web.xml.
- Added user cache to avoid calls to LDAP
- Added finally-blocks to all jndi-context-uses so we clean up all connections even if errors occur
- Changed name on a css-class to avoid clashes with customer classes. .tab is now .igtab
- Added possibility to have a robots.txt in deliver
- Added thumbnail support for PNG-images and made edit-link only appear in front of gif, jpg and png assets in the content tool